--- a/angular.json
+++ b/angular.json
@@ -71,24 +71,22 @@
           "builder": "@angular-devkit/build-angular:extract-i18n"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@nx/jest:jest",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+            "jestConfig": "libs/{projectName}/jest.config.ts"
           }
+        },
+        "test-ci": {
+          "builder": "@nx/jest:jest",
+          "options": {
+            "jestConfig": "libs/{projectName}/jest.config.ts",
+            "collectCoverage": true,
+            "coverageDirectory": "coverage/{projectName}",
+            "coverageReporters": ["html", "lcov", "text-summary"]
+          }
+        },
+        "lint": {
+          "builder": "@nx/eslint:lint"
         }
       }
     }
