--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular-devkit/build-angular": "^19.2.3",
     "@angular/cli": "^19.2.3",
     "@angular/compiler-cli": "^19.2.0",
+    "@nx/eslint-plugin": "^20.6.2",
     "@types/jest": "^29.5.14",
     "angular-eslint": "^19.2.1",
     "eslint": "^9.22.0",
