--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
-    "test:ci": "jest --runInBand"
+    "test:ci": "jest --runInBand",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +36,8 @@
     "@angular/cli": "^19.2.3",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jest": "^29.5.14",
+    "angular-eslint": "19.2.1",
+    "eslint": "^9.22.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
@@ -42,6 +45,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "pretty-quick": "^4.1.1",
     "ts-jest": "^29.2.6",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "typescript-eslint": "8.26.0"
   }
 }
