--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "tailwindcss": "^4.0.14",
     "tailwindcss-primeui": "^0.5.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular-builders/jest": "^19.0.0",
@@ -42,7 +42,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "^14.5.3",
+    "jest-preset-angular": "^14.5.5",
     "prettier-plugin-organize-imports": "^4.1.0",
     "pretty-quick": "^4.1.1",
     "ts-jest": "^29.2.6",
